<resources>
    <string name="app_name">Radically Different</string>
    <string name="welcome">Welcome to Radically Different!</string>
    <string name="intro">* Read the introduction</string>
    <string name="library">* Check out the Library of Radicals</string>
    <string name="matching">* Match radicals to Hanzi</string>
    <string name="roadmap">* Plan an efficient road trip</string>
    <string name="puzzle">* Do a Hanzi puzzle</string>
    <string name="intro_welcome">Welcome to this interactive instructional of reading Chinese! Thank you for joining me.</string>
    <string name="intro_part1">This is intended for people that are currently or have previously studied written Chinese. Please consider looking over the radical library and games afterwards. </string>
    <string name="intro_part2">In 1916 Ferdinand de Saussure, a Swiss linguist, said</string>
    <string name="quote">“Time changes all things; there is no reason why language should escape this universal law.”</string>
    <string name="intro_part3">Any introduction to Chinese characters or Hanzi, will explain that the first were pictographs. As time went on, life changed for the people speaking and writing this language. Their ideas and writing changed. Some things that used to make sense written down, no longer do and as Chinese language learners, we need to accept this.</string>
    <string name="intro_part4">But fear not! Hanzi can actually be very easy for visual learners if you learn to imagine the parts. These parts are known as radicals. If you can learn to break down “complicated” words in any other language, Chinese is no different.</string>
    <string name="hanzi_example">女+马=妈</string>
    <string name="pinyin_example">nü+ma=ma</string>
    <string name="english_example">The woman whose name sounds like “horse” (ma) is the mother (ma).</string>
    <string name="intro_part5">Not all words are this simple, but enough are that getting comfortable with beginning Chinese can set up your foundation for intermediate level.</string>
    <string name="intro_part6">Please look up the radical library with 85 different introductory radicals to get you started. Once you’re comfortable there, try some games to see if you’ve gotten the hang of it.</string>
    <string name="intro_part7">Note: we’re going to focus on radicals- hence the app name. I will be supplying you with tips and tricks to learn them and I hope you find them as useful as I did.</string>
    <string name="radical">%s</string>
    <string name="strokes">%s</string>
    <string name="traditional">%s</string>
    <string name="variant">%s</string>
    <string name="variant2">%s</string>
    <string name="meaning">%s</string>
    <string name="mnemonic">%s</string>
    <string name="example1">%s</string>
    <string name="example2">%s</string>
    <string name="example3">%s</string>
    <string name="note">%s</string>
    <string name="tooltipradical">radical</string>
    <string name="tooltipstrokes">strokes</string>
    <string name="tooltiptraditional">traditional</string>
    <string name="tooltipvariant">variant</string>
    <string name="tooltipmeaning">meaning</string>
    <string name="tooltipmnemonic">mnemonic</string>
    <string name="tooltipexample">example</string>
    <string name="tooltipnote">note</string>
    <string name="timer">%s</string>
    <string name="char1">%s</string>
    <string name="char2">%s</string>
    <string name="char3">%s</string>
    <string name="char4">%s</string>
    <string name="char5">%s</string>
    <string name="char6">%s</string>
    <string name="char7">%s</string>
    <string name="char8">%s</string>
    <string name="char9">%s</string>
    <string name="lose">Try Again!</string>
    <string name="win">You Win!</string>
    <string name="radicaltooltip">Match the characters below to this radical</string>
    <string name="start">Press to Start</string>
    <string name="settings">Settings and Instructions</string>
    <string name="read_me_button">Read Me</string>
    <string name="instructions">Instructions</string>
    <string name="matching_game_instructions1">This game works best in portrait mode.</string>
    <string name="matching_game_instructions2">Please set your preferred difficulty level to adjust how much time you would like.</string>
    <string name="matching_game_instructions3">The radical at the top indicates what you should be looking for.</string>
    <string name="matching_game_instructions4">There will be six Hanzi with the expected radical, and three without.</string>
    <string name="tip">Hot tip! Depending on the radical, it may have variants. Double check for those.</string>
    <string name="roadTrip_instructions1">This game works best in landscape mode.</string>
    <string name="roadTrip_instructions2">Please set your preferred difficulty level to adjust how much time you would like.</string>
    <string name="roadTrip_instructions3">Plan an efficient road trip by making the map stops connect together via radicals.</string>
    <string name="roadTrip_instructions4">The Start and Stop landmarks should give you a hint to what radical should come next. </string>
    <string name="roadTrip_instructions5">There will be six Hanzi with differing radicals that can be selected from drop down menus. If you select one  Hanzi, it will be removed from other pit stops.</string>
    <string name="roadTrip_instructions6">If you plan successfully, your car will reach its destination. Else, you run out of gas.</string>
    <string name="puzzle_instructions1">This game works best in landscape mode.</string>
    <string name="puzzle_instructions2">Please set your preferred difficulty level to adjust how much time you would like.</string>
    <string name="puzzle_instructions3">On the left, there is a large blank space, that is your canvas</string>
    <string name="puzzle_instructions4">On the right, radicals that may be used as puzzle pieces.</string>
    <string name="puzzle_instructions5">Place the radical in its correct position and it will disappear.</string>
    <string name="tip2">Hot tip! Some radicals will change shape. Also, if there are copies of a radical, it may remove the copy, but that is fine.</string>
    <string name="tooltipstart">start here</string>
    <string name="tooltipend">end here</string>
    <string name="startButton">Start</string>
    <string name="endButton">GO!!!</string>
    <string name="puzzleReadMe">Read Me</string>
    <string name="puzzleStart">Start</string>
    <string name="levelSettings">Level Settings</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
</resources>