<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="ExtraText">
    tools:context=".MatchingReadMeActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roadTrip_instructions1"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roadTrip_instructions2"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roadTrip_instructions3"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roadTrip_instructions4"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roadTrip_instructions5"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textSize="18sp"/>
</LinearLayout>