<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchingIntroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Road Trip"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/settings"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/read_me_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_me_button" />

    <Button
        android:id="@+id/roadTripStartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />



</LinearLayout>