<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchingIntroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="Puzzle"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/puzzle_read_me_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_me_button" />

    <Button
        android:id="@+id/puzzleStartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"/>



</LinearLayout>